add validation for room and seats
