# service/src/main/java/com/ironia/realmeet/validator/RoomValidator.java
@@ -1,0 +1,25 @@
+package com.ironia.realmeet.validator;
+
+import static com.ironia.realmeet.validator.ValidatorConstants.*;
+import static com.ironia.realmeet.validator.ValidatorUtils.*;
+
+import com.ironia.realmeet.api.model.CreateRoomDTO;
+import org.springframework.stereotype.Component;
+
+@Component
+public class RoomValidator {
+    public void validate(CreateRoomDTO createRoomDTO) {
+        var validationErrors = new ValidationErrors();
+
+        //Room name
+        validateRequired(createRoomDTO.getName(), ROOM_NAME, validationErrors);
+        validateMaxLength(createRoomDTO.getName(), ROOM_NAME, ROOM_NAME_MAX_LENGTH, validationErrors);
+
+        //Room seats
+        validateRequired(createRoomDTO.getSeats(), ROOM_SEATS, validationErrors);
+        validateMinValue(createRoomDTO.getSeats(), ROOM_SEATS, ROOM_SEATS_MIN_VALUE, validationErrors);
+        validateMaxValue(createRoomDTO.getSeats(), ROOM_SEATS, ROOM_SEATS_MAX_VALUE, validationErrors);
+
+        throwOnError(validationErrors);
+    }
+}
